--- a/views/inicio.pug
+++ b/views/inicio.pug
@@ -9,7 +9,7 @@ block contenido
 
         div
             //- Seccion buscador
-            section(class="h-screen bg-cover bg-center bg-no-repeat flex flex-col justify-center" style=`background-image: url(${imageUrl})`)
+            section(class="h-[calc(100vh-80px)] bg-cover bg-center bg-no-repeat flex flex-col justify-center" style=`background-image: url(${imageUrl})`)
                 div.flex.items-center.flex-col
                     h2.text-5xl.text-polished-white Bienvenido a 
                         span.font-bold Fotaza
