Mejores publicaciones y demas imagenes, codigo añadido en el backend y cambiando en el frontend

--- a/views/publications/publication.pug
+++ b/views/publications/publication.pug
@@ -129,7 +129,7 @@ block contenido
                     .myComment(class="flex items-start mb-8")
                         img(src=`/img/profiles/${user.image_url}`, alt="" class="w-14 mr-2")
                         div(class="bg-gray-200 rounded-[10px] rounded-tl-[0px] w-full")
-                            textarea#commentText(name="commentText" placeholder="Agrega un comentario" class="bg-transparent p-3 pl-6 w-full h-20 outline-none resize-none")
+                            textarea#commentText(name="commentText" placeholder="Agrega un comentario" class="bg-transparent p-3 pl-6 w-full h-20 border-none resize-none outline-none")
                             div.flex.items-center.justify-between
                                 div(class="flex text-xs ml-4 text-principal-gray")
                                     p#countText 0 
