--- a/public/css/app.css
+++ b/public/css/app.css
@@ -509,6 +509,9 @@ video {
   top: 0px;
   bottom: 0px;
 }
+.-bottom-6 {
+  bottom: -1.5rem;
+}
 .-bottom-8 {
   bottom: -2rem;
 }
@@ -548,8 +551,17 @@ video {
 .left-\[3\%\] {
   left: 3%;
 }
+.left-full {
+  left: 100%;
+}
 .right-0 {
   right: 0px;
+}
+.right-1 {
+  right: 0.25rem;
+}
+.right-10 {
+  right: 2.5rem;
 }
 .right-2 {
   right: 0.5rem;
@@ -595,6 +607,12 @@ video {
 }
 .top-\[20\%\] {
   top: 20%;
+}
+.bottom-14 {
+  bottom: 3.5rem;
+}
+.z-10 {
+  z-index: 10;
 }
 .z-20 {
   z-index: 20;
@@ -683,6 +701,21 @@ video {
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
+.-ml-2 {
+  margin-left: -0.5rem;
+}
+.-ml-5 {
+  margin-left: -1.25rem;
+}
+.-mr-5 {
+  margin-right: -1.25rem;
+}
+.-mt-1 {
+  margin-top: -0.25rem;
+}
+.-mt-10 {
+  margin-top: -2.5rem;
+}
 .mb-1 {
   margin-bottom: 0.25rem;
 }
@@ -691,6 +724,9 @@ video {
 }
 .mb-20 {
   margin-bottom: 5rem;
+}
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 .mb-4 {
   margin-bottom: 1rem;
@@ -725,6 +761,9 @@ video {
 .ml-4 {
   margin-left: 1rem;
 }
+.ml-5 {
+  margin-left: 1.25rem;
+}
 .ml-auto {
   margin-left: auto;
 }
@@ -736,6 +775,9 @@ video {
 }
 .mr-4 {
   margin-right: 1rem;
+}
+.mr-5 {
+  margin-right: 1.25rem;
 }
 .mr-6 {
   margin-right: 1.5rem;
@@ -809,6 +851,9 @@ video {
 .h-11 {
   height: 2.75rem;
 }
+.h-12 {
+  height: 3rem;
+}
 .h-14 {
   height: 3.5rem;
 }
@@ -875,6 +920,9 @@ video {
 .h-\[120px\] {
   height: 120px;
 }
+.h-\[calc\(100vh-264px\)\] {
+  height: calc(100vh - 264px);
+}
 .h-\[calc\(100vh-80px\)\] {
   height: calc(100vh - 80px);
 }
@@ -891,11 +939,17 @@ video {
 .h-screen {
   height: 100vh;
 }
+.max-h-24 {
+  max-height: 6rem;
+}
 .max-h-56 {
   max-height: 14rem;
 }
 .max-h-96 {
   max-height: 24rem;
+}
+.max-h-\[calc\(100vh-290px\)\] {
+  max-height: calc(100vh - 290px);
 }
 .min-h-\[100px\] {
   min-height: 100px;
@@ -908,6 +962,9 @@ video {
 }
 .min-h-\[50px\] {
   min-height: 50px;
+}
+.min-h-\[56px\] {
+  min-height: 56px;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -936,11 +993,17 @@ video {
 .w-11\/12 {
   width: 91.666667%;
 }
+.w-12 {
+  width: 3rem;
+}
 .w-14 {
   width: 3.5rem;
 }
 .w-16 {
   width: 4rem;
+}
+.w-2\/12 {
+  width: 16.666667%;
 }
 .w-2\/3 {
   width: 66.666667%;
@@ -965,6 +1028,9 @@ video {
 }
 .w-3\/12 {
   width: 25%;
+}
+.w-3\/4 {
+  width: 75%;
 }
 .w-3\/5 {
   width: 60%;
@@ -1048,6 +1114,9 @@ video {
 .min-w-\[250px\] {
   min-width: 250px;
 }
+.min-w-\[420px\] {
+  min-width: 420px;
+}
 .min-w-fit {
   min-width: -moz-fit-content;
   min-width: fit-content;
@@ -1067,11 +1136,20 @@ video {
 .max-w-\[300px\] {
   max-width: 300px;
 }
+.max-w-\[80\%\] {
+  max-width: 80%;
+}
+.max-w-\[flex-1\] {
+  max-width: flex-1;
+}
 .max-w-xs {
   max-width: 20rem;
 }
 .flex-1 {
   flex: 1 1 0%;
+}
+.flex-grow {
+  flex-grow: 1;
 }
 .-translate-x-1\/2 {
   --tw-translate-x: -50%;
@@ -1083,6 +1161,14 @@ video {
 }
 .translate-y-\[-50\%\] {
   --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.translate-x-12 {
+  --tw-translate-x: 3rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.translate-x-96 {
+  --tw-translate-x: 24rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-90 {
@@ -1202,14 +1288,29 @@ video {
   border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }
+.self-end {
+  align-self: flex-end;
+}
 .overflow-auto {
   overflow: auto;
 }
 .overflow-hidden {
   overflow: hidden;
 }
+.overflow-scroll {
+  overflow: scroll;
+}
 .overflow-y-auto {
   overflow-y: auto;
+}
+.overflow-y-scroll {
+  overflow-y: scroll;
+}
+.text-ellipsis {
+  text-overflow: ellipsis;
+}
+.whitespace-nowrap {
+  white-space: nowrap;
 }
 .rounded {
   border-radius: 0.25rem;
@@ -1232,6 +1333,9 @@ video {
 .rounded-md {
   border-radius: 0.375rem;
 }
+.rounded-sm {
+  border-radius: 0.125rem;
+}
 .rounded-xl {
   border-radius: 0.75rem;
 }
@@ -1242,6 +1346,10 @@ video {
 .rounded-r-md {
   border-top-right-radius: 0.375rem;
   border-bottom-right-radius: 0.375rem;
+}
+.rounded-t-3xl {
+  border-top-left-radius: 1.5rem;
+  border-top-right-radius: 1.5rem;
 }
 .rounded-t-xl {
   border-top-left-radius: 0.75rem;
@@ -1343,8 +1451,17 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
+.bg-black\/10 {
+  background-color: rgb(0 0 0 / 0.1);
+}
 .bg-black\/20 {
   background-color: rgb(0 0 0 / 0.2);
+}
+.bg-black\/25 {
+  background-color: rgb(0 0 0 / 0.25);
+}
+.bg-black\/80 {
+  background-color: rgb(0 0 0 / 0.8);
 }
 .bg-blue-100 {
   --tw-bg-opacity: 1;
@@ -1373,9 +1490,17 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
+.bg-gray-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
 .bg-gray-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
+.bg-gray-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 .bg-gray-input {
   background-color: rgba(238, 238, 238, .7);
@@ -1450,6 +1575,20 @@ video {
 .bg-white\/30 {
   background-color: rgb(255 255 255 / 0.3);
 }
+.bg-principal-gray\/70 {
+  background-color: rgb(57 62 70 / 0.7);
+}
+.bg-principal-gray\/90 {
+  background-color: rgb(57 62 70 / 0.9);
+}
+.bg-gray-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+.bg-slate-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
 }
@@ -1458,6 +1597,9 @@ video {
 }
 .bg-opacity-60 {
   --tw-bg-opacity: 0.6;
+}
+.bg-opacity-70 {
+  --tw-bg-opacity: 0.7;
 }
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
@@ -1560,6 +1702,10 @@ video {
   padding-left: 1rem;
   padding-right: 1rem;
 }
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -1623,6 +1769,12 @@ video {
 .pb-8 {
   padding-bottom: 2rem;
 }
+.pl-1 {
+  padding-left: 0.25rem;
+}
+.pl-10 {
+  padding-left: 2.5rem;
+}
 .pl-12 {
   padding-left: 3rem;
 }
@@ -1644,6 +1796,9 @@ video {
 .pl-9 {
   padding-left: 2.25rem;
 }
+.pr-10 {
+  padding-right: 2.5rem;
+}
 .pr-2 {
   padding-right: 0.5rem;
 }
@@ -1652,6 +1807,9 @@ video {
 }
 .pr-4 {
   padding-right: 1rem;
+}
+.pr-5 {
+  padding-right: 1.25rem;
 }
 .pt-1 {
   padding-top: 0.25rem;
@@ -1667,6 +1825,12 @@ video {
 }
 .pt-5 {
   padding-top: 1.25rem;
+}
+.pl-8 {
+  padding-left: 2rem;
+}
+.pt-3 {
+  padding-top: 0.75rem;
 }
 .text-left {
   text-align: left;
@@ -1733,6 +1897,9 @@ video {
 .font-extrabold {
   font-weight: 800;
 }
+.font-extralight {
+  font-weight: 200;
+}
 .font-light {
   font-weight: 300;
 }
@@ -1795,6 +1962,14 @@ video {
   --tw-text-opacity: 1;
   color: rgb(34 197 94 / var(--tw-text-opacity));
 }
+.text-green-600 {
+  --tw-text-opacity: 1;
+  color: rgb(22 163 74 / var(--tw-text-opacity));
+}
+.text-green-700 {
+  --tw-text-opacity: 1;
+  color: rgb(21 128 61 / var(--tw-text-opacity));
+}
 .text-green-800 {
   --tw-text-opacity: 1;
   color: rgb(22 101 52 / var(--tw-text-opacity));
@@ -1847,6 +2022,14 @@ video {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.text-yellow-100 {
+  --tw-text-opacity: 1;
+  color: rgb(254 249 195 / var(--tw-text-opacity));
+}
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
 .underline {
   text-decoration-line: underline;
 }
@@ -1874,6 +2057,9 @@ video {
 }
 .opacity-80 {
   opacity: 0.8;
+}
+.opacity-70 {
+  opacity: 0.7;
 }
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
@@ -2081,9 +2267,27 @@ video {
 }
 
 
+.hover\:bg-principal-gray:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(57 62 70 / var(--tw-bg-opacity));
+}
+
+
 .hover\:bg-secondary-gray:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(146 154 171 / var(--tw-bg-opacity));
+}
+
+
+.hover\:bg-slate-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
+
+
+.hover\:bg-gray-900:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
 
@@ -2223,6 +2427,11 @@ video {
 }
 
 
+.group:hover .group-hover\:left-0 {
+  left: 0px;
+}
+
+
 .group:hover .group-hover\:translate-y-\[100\%\] {
   --tw-translate-y: 100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2237,6 +2446,17 @@ video {
 
 .group:hover .group-hover\:bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
+}
+
+
+.group:hover .group-hover\:text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+
+.group:hover .group-hover\:font-semibold {
+  font-weight: 600;
 }
 
 
@@ -2734,16 +2954,40 @@ video {
 
 @media (min-width: 1280px) {
 
+  .xl\:h-36 {
+    height: 9rem;
+  }
+
   .xl\:h-80 {
     height: 20rem;
+  }
+
+  .xl\:w-10\/12 {
+    width: 83.333333%;
   }
 }
 
 
 @media (min-width: 1536px) {
 
+  .\32xl\:h-44 {
+    height: 11rem;
+  }
+
+  .\32xl\:w-2\/12 {
+    width: 16.666667%;
+  }
+
   .\32xl\:max-w-none {
     max-width: none;
+  }
+
+  .\32xl\:flex-1 {
+    flex: 1 1 0%;
+  }
+
+  .\32xl\:flex-initial {
+    flex: 0 1 auto;
   }
 
   .\32xl\:columns-4 {
