Agregar informacion de Mercado Pago

--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -28,6 +28,8 @@ header(class="px-3.5 bg-white")
                             
                             a(href="/categories/select" class="")
                                 li(class="text-lg hover:bg-hard-gray cursor-pointer py-4 pl-6") Mis intereses
+                            a(href="/chat" class="")
+                                li(class="text-lg hover:bg-hard-gray cursor-pointer py-4 pl-6") Chat
                             
                             hr(class="w-4/5 m-auto")
                             
