--- a/views/users/account/changePassword.pug
+++ b/views/users/account/changePassword.pug
@@ -16,6 +16,9 @@ block contenido
             a(href="/users/account/password") 
                 div(class="bg-gray-300 text-lg p-4 group")  
                     span(class="group-hover:underline") Cambiar contraseña
+            a(href="/users/account/configure-payment") 
+                div(class="bg-gray-300 text-lg p-4 group")  
+                    span(class="group-hover:underline") Gestionar pagos
         
         section(class="bg-white shadow-2xl lg:w-3/4 lg:ml-6 px-2 max-w-4xl")
             div(class="w-full text-center p-4 sm:text-left")
