--- a/public/css/app.css
+++ b/public/css/app.css
@@ -608,8 +608,14 @@ video {
 .top-\[20\%\] {
   top: 20%;
 }
-.bottom-14 {
-  bottom: 3.5rem;
+.bottom-4 {
+  bottom: 1rem;
+}
+.left-1 {
+  left: 0.25rem;
+}
+.top-12 {
+  top: 3rem;
 }
 .z-10 {
   z-index: 10;
@@ -700,6 +706,10 @@ video {
 .my-8 {
   margin-top: 2rem;
   margin-bottom: 2rem;
+}
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 .-ml-2 {
   margin-left: -0.5rem;
@@ -821,6 +831,21 @@ video {
 .mt-\[-10px\] {
   margin-top: -10px;
 }
+.-mt-5 {
+  margin-top: -1.25rem;
+}
+.-mb-3 {
+  margin-bottom: -0.75rem;
+}
+.-mt-3 {
+  margin-top: -0.75rem;
+}
+.-mt-4 {
+  margin-top: -1rem;
+}
+.-mt-7 {
+  margin-top: -1.75rem;
+}
 .block {
   display: block;
 }
@@ -939,6 +964,12 @@ video {
 .h-screen {
   height: 100vh;
 }
+.h-4\/5 {
+  height: 80%;
+}
+.h-1\/2 {
+  height: 50%;
+}
 .max-h-24 {
   max-height: 6rem;
 }
@@ -968,6 +999,18 @@ video {
 }
 .min-h-screen {
   min-height: 100vh;
+}
+.min-h-\[840px\] {
+  min-height: 840px;
+}
+.min-h-\[230px\] {
+  min-height: 230px;
+}
+.min-h-\[270px\] {
+  min-height: 270px;
+}
+.min-h-\[268px\] {
+  min-height: 268px;
 }
 .w-0 {
   width: 0px;
@@ -1159,16 +1202,16 @@ video {
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.translate-x-96 {
+  --tw-translate-x: 24rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .translate-y-\[-50\%\] {
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.translate-x-12 {
-  --tw-translate-x: 3rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.translate-x-96 {
-  --tw-translate-x: 24rem;
+.-translate-x-full {
+  --tw-translate-x: -100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-90 {
@@ -1282,6 +1325,11 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .divide-y > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-y-reverse: 0;
@@ -1444,6 +1492,10 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
+.border-red-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
+}
 .border-b-transparent {
   border-bottom-color: transparent;
 }
@@ -1575,19 +1627,24 @@ video {
 .bg-white\/30 {
   background-color: rgb(255 255 255 / 0.3);
 }
-.bg-principal-gray\/70 {
-  background-color: rgb(57 62 70 / 0.7);
+.bg-gray-input\/70 {
+  background-color: rgba(238, 238, 238, 0.7);
 }
-.bg-principal-gray\/90 {
-  background-color: rgb(57 62 70 / 0.9);
+.bg-gray-input\/90 {
+  background-color: rgba(238, 238, 238, 0.9);
 }
-.bg-gray-800 {
+.bg-gray-500\/70 {
+  background-color: rgb(107 114 128 / 0.7);
+}
+.bg-gray-500\/60 {
+  background-color: rgb(107 114 128 / 0.6);
+}
+.bg-gray-500\/30 {
+  background-color: rgb(107 114 128 / 0.3);
+}
+.bg-sky-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
-.bg-slate-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+  background-color: rgb(14 165 233 / var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
@@ -1598,11 +1655,11 @@ video {
 .bg-opacity-60 {
   --tw-bg-opacity: 0.6;
 }
-.bg-opacity-70 {
-  --tw-bg-opacity: 0.7;
-}
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+.bg-gradient-to-b {
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 .from-black {
   --tw-gradient-from: #000 var(--tw-gradient-from-position);
@@ -1614,6 +1671,11 @@ video {
   --tw-gradient-to: rgba(238, 238, 238, 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
+.from-sky-500 {
+  --tw-gradient-from: #0ea5e9 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(14 165 233 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
 .via-gray-900 {
   --tw-gradient-to: rgb(17 24 39 / 0)  var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), #111827 var(--tw-gradient-via-position), var(--tw-gradient-to);
@@ -1623,6 +1685,9 @@ video {
 }
 .to-transparent {
   --tw-gradient-to: transparent var(--tw-gradient-to-position);
+}
+.to-slate-50 {
+  --tw-gradient-to: #f8fafc var(--tw-gradient-to-position);
 }
 .bg-cover {
   background-size: cover;
@@ -1754,6 +1819,10 @@ video {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
 }
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
 .pb-1 {
   padding-bottom: 0.25rem;
 }
@@ -1793,6 +1862,9 @@ video {
 .pl-6 {
   padding-left: 1.5rem;
 }
+.pl-8 {
+  padding-left: 2rem;
+}
 .pl-9 {
   padding-left: 2.25rem;
 }
@@ -1820,17 +1892,17 @@ video {
 .pt-2 {
   padding-top: 0.5rem;
 }
+.pt-3 {
+  padding-top: 0.75rem;
+}
 .pt-4 {
   padding-top: 1rem;
 }
 .pt-5 {
   padding-top: 1.25rem;
 }
-.pl-8 {
-  padding-left: 2rem;
-}
-.pt-3 {
-  padding-top: 0.75rem;
+.pr-8 {
+  padding-right: 2rem;
 }
 .text-left {
   text-align: left;
@@ -1917,6 +1989,10 @@ video {
 }
 .italic {
   font-style: italic;
+}
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 .text-blue-400 {
   --tw-text-opacity: 1;
@@ -2026,10 +2102,6 @@ video {
   --tw-text-opacity: 1;
   color: rgb(254 249 195 / var(--tw-text-opacity));
 }
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
 .underline {
   text-decoration-line: underline;
 }
@@ -2057,9 +2129,6 @@ video {
 }
 .opacity-80 {
   opacity: 0.8;
-}
-.opacity-70 {
-  opacity: 0.7;
 }
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
@@ -2199,6 +2268,13 @@ video {
 }
 
 
+.hover\:scale-50:hover {
+  --tw-scale-x: .5;
+  --tw-scale-y: .5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+
 .hover\:transform:hover {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -2250,6 +2326,12 @@ video {
 }
 
 
+.hover\:bg-gray-900:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+}
+
+
 .hover\:bg-gray-input:hover {
   background-color: rgba(238, 238, 238, .7);
 }
@@ -2267,12 +2349,6 @@ video {
 }
 
 
-.hover\:bg-principal-gray:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(57 62 70 / var(--tw-bg-opacity));
-}
-
-
 .hover\:bg-secondary-gray:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(146 154 171 / var(--tw-bg-opacity));
@@ -2285,15 +2361,32 @@ video {
 }
 
 
-.hover\:bg-gray-900:hover {
+.hover\:bg-gray-500:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+
+
+.hover\:bg-gray-500\/50:hover {
+  background-color: rgb(107 114 128 / 0.5);
+}
+
+
+.hover\:bg-red-50:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 242 242 / var(--tw-bg-opacity));
 }
 
 
 .hover\:text-principal-gray:hover {
   --tw-text-opacity: 1;
   color: rgb(57 62 70 / var(--tw-text-opacity));
+}
+
+
+.hover\:text-red-300:hover {
+  --tw-text-opacity: 1;
+  color: rgb(252 165 165 / var(--tw-text-opacity));
 }
 
 
@@ -2633,6 +2726,10 @@ video {
     width: fit-content;
   }
 
+  .sm\:w-40 {
+    width: 10rem;
+  }
+
   .sm\:max-w-\[200px\] {
     max-width: 200px;
   }
@@ -2679,6 +2776,10 @@ video {
 
   .sm\:text-left {
     text-align: left;
+  }
+
+  .sm\:text-center {
+    text-align: center;
   }
 
   .sm\:text-right {
