--- a/public/css/app.css
+++ b/public/css/app.css
@@ -536,6 +536,9 @@ video {
 .left-0 {
   left: 0px;
 }
+.left-1 {
+  left: 0.25rem;
+}
 .left-1\/2 {
   left: 50%;
 }
@@ -584,6 +587,9 @@ video {
 .top-10 {
   top: 2.5rem;
 }
+.top-12 {
+  top: 3rem;
+}
 .top-14 {
   top: 3.5rem;
 }
@@ -607,15 +613,6 @@ video {
 }
 .top-\[20\%\] {
   top: 20%;
-}
-.bottom-4 {
-  bottom: 1rem;
-}
-.left-1 {
-  left: 0.25rem;
-}
-.top-12 {
-  top: 3rem;
 }
 .z-10 {
   z-index: 10;
@@ -703,13 +700,13 @@ video {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
 }
-.my-8 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
+}
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 .-ml-2 {
   margin-left: -0.5rem;
@@ -725,6 +722,12 @@ video {
 }
 .-mt-10 {
   margin-top: -2.5rem;
+}
+.-mt-5 {
+  margin-top: -1.25rem;
+}
+.-mt-7 {
+  margin-top: -1.75rem;
 }
 .mb-1 {
   margin-bottom: 0.25rem;
@@ -831,21 +834,6 @@ video {
 .mt-\[-10px\] {
   margin-top: -10px;
 }
-.-mt-5 {
-  margin-top: -1.25rem;
-}
-.-mb-3 {
-  margin-bottom: -0.75rem;
-}
-.-mt-3 {
-  margin-top: -0.75rem;
-}
-.-mt-4 {
-  margin-top: -1rem;
-}
-.-mt-7 {
-  margin-top: -1.75rem;
-}
 .block {
   display: block;
 }
@@ -866,6 +854,9 @@ video {
 }
 .h-0 {
   height: 0px;
+}
+.h-1\/2 {
+  height: 50%;
 }
 .h-1\/4 {
   height: 25%;
@@ -964,12 +955,6 @@ video {
 .h-screen {
   height: 100vh;
 }
-.h-4\/5 {
-  height: 80%;
-}
-.h-1\/2 {
-  height: 50%;
-}
 .max-h-24 {
   max-height: 6rem;
 }
@@ -991,6 +976,12 @@ video {
 .min-h-\[250px\] {
   min-height: 250px;
 }
+.min-h-\[268px\] {
+  min-height: 268px;
+}
+.min-h-\[270px\] {
+  min-height: 270px;
+}
 .min-h-\[50px\] {
   min-height: 50px;
 }
@@ -999,18 +990,6 @@ video {
 }
 .min-h-screen {
   min-height: 100vh;
-}
-.min-h-\[840px\] {
-  min-height: 840px;
-}
-.min-h-\[230px\] {
-  min-height: 230px;
-}
-.min-h-\[270px\] {
-  min-height: 270px;
-}
-.min-h-\[268px\] {
-  min-height: 268px;
 }
 .w-0 {
   width: 0px;
@@ -1198,6 +1177,10 @@ video {
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.-translate-x-full {
+  --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .-translate-y-1\/2 {
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1208,10 +1191,6 @@ video {
 }
 .translate-y-\[-50\%\] {
   --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.-translate-x-full {
-  --tw-translate-x: -100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-90 {
@@ -1311,6 +1290,11 @@ video {
   margin-right: calc(0.75rem * var(--tw-space-x-reverse));
   margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1321,15 +1305,15 @@ video {
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
-.space-x-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .divide-y > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-y-reverse: 0;
@@ -1477,6 +1461,10 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(248 113 113 / var(--tw-border-opacity));
 }
+.border-red-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
+}
 .border-red-600 {
   --tw-border-opacity: 1;
   border-color: rgb(220 38 38 / var(--tw-border-opacity));
@@ -1491,10 +1479,6 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-.border-red-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(239 68 68 / var(--tw-border-opacity));
 }
 .border-b-transparent {
   border-bottom-color: transparent;
@@ -1542,9 +1526,15 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
+.bg-gray-400\/50 {
+  background-color: rgb(156 163 175 / 0.5);
+}
 .bg-gray-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+.bg-gray-500\/30 {
+  background-color: rgb(107 114 128 / 0.3);
 }
 .bg-gray-600 {
   --tw-bg-opacity: 1;
@@ -1609,6 +1599,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(146 154 171 / var(--tw-bg-opacity));
 }
+.bg-sky-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 165 233 / var(--tw-bg-opacity));
+}
 .bg-slate-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
@@ -1627,25 +1621,6 @@ video {
 .bg-white\/30 {
   background-color: rgb(255 255 255 / 0.3);
 }
-.bg-gray-input\/70 {
-  background-color: rgba(238, 238, 238, 0.7);
-}
-.bg-gray-input\/90 {
-  background-color: rgba(238, 238, 238, 0.9);
-}
-.bg-gray-500\/70 {
-  background-color: rgb(107 114 128 / 0.7);
-}
-.bg-gray-500\/60 {
-  background-color: rgb(107 114 128 / 0.6);
-}
-.bg-gray-500\/30 {
-  background-color: rgb(107 114 128 / 0.3);
-}
-.bg-sky-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(14 165 233 / var(--tw-bg-opacity));
-}
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
 }
@@ -1655,11 +1630,11 @@ video {
 .bg-opacity-60 {
   --tw-bg-opacity: 0.6;
 }
-.bg-gradient-to-r {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 .from-black {
   --tw-gradient-from: #000 var(--tw-gradient-from-position);
@@ -1683,11 +1658,11 @@ video {
 .to-gray-700 {
   --tw-gradient-to: #374151 var(--tw-gradient-to-position);
 }
-.to-transparent {
-  --tw-gradient-to: transparent var(--tw-gradient-to-position);
-}
 .to-slate-50 {
   --tw-gradient-to: #f8fafc var(--tw-gradient-to-position);
+}
+.to-transparent {
+  --tw-gradient-to: transparent var(--tw-gradient-to-position);
 }
 .bg-cover {
   background-size: cover;
@@ -1742,6 +1717,10 @@ video {
 .px-11 {
   padding-left: 2.75rem;
   padding-right: 2.75rem;
+}
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 .px-14 {
   padding-left: 3.5rem;
@@ -1819,10 +1798,6 @@ video {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
 }
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
 .pb-1 {
   padding-bottom: 0.25rem;
 }
@@ -1883,6 +1858,9 @@ video {
 .pr-5 {
   padding-right: 1.25rem;
 }
+.pr-8 {
+  padding-right: 2rem;
+}
 .pt-1 {
   padding-top: 0.25rem;
 }
@@ -1900,9 +1878,6 @@ video {
 }
 .pt-5 {
   padding-top: 1.25rem;
-}
-.pr-8 {
-  padding-right: 2rem;
 }
 .text-left {
   text-align: left;
@@ -1941,6 +1916,10 @@ video {
 }
 .text-7xl {
   font-size: 4.5rem;
+  line-height: 1;
+}
+.text-8xl {
+  font-size: 6rem;
   line-height: 1;
 }
 .text-base {
@@ -2268,13 +2247,6 @@ video {
 }
 
 
-.hover\:scale-50:hover {
-  --tw-scale-x: .5;
-  --tw-scale-y: .5;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-
 .hover\:transform:hover {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -2326,6 +2298,11 @@ video {
 }
 
 
+.hover\:bg-gray-500\/50:hover {
+  background-color: rgb(107 114 128 / 0.5);
+}
+
+
 .hover\:bg-gray-900:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
@@ -2334,6 +2311,11 @@ video {
 
 .hover\:bg-gray-input:hover {
   background-color: rgba(238, 238, 238, .7);
+}
+
+
+.hover\:bg-gray-input\/90:hover {
+  background-color: rgba(238, 238, 238, 0.9);
 }
 
 
@@ -2349,32 +2331,33 @@ video {
 }
 
 
+.hover\:bg-red-50:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 242 242 / var(--tw-bg-opacity));
+}
+
+
+.hover\:bg-red-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}
+
+
 .hover\:bg-secondary-gray:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(146 154 171 / var(--tw-bg-opacity));
 }
 
 
+.hover\:bg-sky-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 132 199 / var(--tw-bg-opacity));
+}
+
+
 .hover\:bg-slate-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
-}
-
-
-.hover\:bg-gray-500:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-}
-
-
-.hover\:bg-gray-500\/50:hover {
-  background-color: rgb(107 114 128 / 0.5);
-}
-
-
-.hover\:bg-red-50:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 242 242 / var(--tw-bg-opacity));
 }
 
 
@@ -2726,10 +2709,6 @@ video {
     width: fit-content;
   }
 
-  .sm\:w-40 {
-    width: 10rem;
-  }
-
   .sm\:max-w-\[200px\] {
     max-width: 200px;
   }
@@ -2819,16 +2798,8 @@ video {
     margin-right: 2rem;
   }
 
-  .md\:mb-8 {
-    margin-bottom: 2rem;
-  }
-
   .md\:mt-0 {
     margin-top: 0px;
-  }
-
-  .md\:mt-20 {
-    margin-top: 5rem;
   }
 
   .md\:flex {
@@ -2897,6 +2868,10 @@ video {
   .md\:px-16 {
     padding-left: 4rem;
     padding-right: 4rem;
+  }
+
+  .md\:pb-8 {
+    padding-bottom: 2rem;
   }
 
   .md\:pl-8 {
