--- a/views/publications/create.pug
+++ b/views/publications/create.pug
@@ -12,8 +12,8 @@ block styles
 block contenido
     include ../layout/header
 
-    main(class="md:pt-10 relative")
-        div(class="min-h-screen h-fit md:min-h-fit md:h-fit md:w-4/6 rounded-md shadow-md m-auto bg-white md:max-w-5xl relative md:mb-8")
+    main(class="md:pt-10 relative  md:pb-8")
+        div(class="min-h-screen h-fit md:min-h-fit md:h-fit md:w-4/6 rounded-md shadow-md m-auto bg-white md:max-w-5xl relative")
             form(id="form" action="/publications/add-image" method="POST" enctype="multipart/form-data" class="relative h-fit") 
                 //--aa
                 #privacyOptionsAndPhoto(class="p-4 h-fit") 
@@ -283,6 +283,19 @@ block contenido
                     main(class="max-h-56 overflow-auto")
                         ol#errorsBackend(class="list-decimal ml-10 mt-3 space-y-1")
 
+        #alertConfigurePayment(class="z-50 absolute top-0 left-0 w-full h-full bg-gray-400/50 grid place-content-center hidden")
+            div(class="bg-white p-8")
+                div(class="w-full text-center p-4") 
+                    i(class="fa-solid fa-circle-exclamation text-8xl text-red-600")
+                div(class="m-auto text-center w-1/2 space-y-3 p-4 pb-6")
+                    h3(class="text-3xl text-principal-gray font-semibold") Metodo de pago
+                    p(class="text-gray-400 font-light text-sm" style="text-wrap:balance") Debes configurar el metodo por el cual recibiras el pago por esta publicacion en caso de que sea adquirida por un usuario
+                div(class="flex flex-col w-1/2 m-auto space-y-3") 
+                    a(href="/users/account/configure-payment" class="w-full")
+                        button(type="button" class="bg-sky-500 py-2 px-4 text-white w-full hover:bg-sky-600") Configurar
+                    button#btnCloseAlertPayment(type="button" class="py-2 px-4 bg-gray-input text-principal-gray w-full hover:bg-gray-input/90") Volver  
+
+
     section#sectionLoader(class="hidden absolute top-0 left-0 bottom-0 right-0 w-full h-full bg-gray-100/75 z-50 grid place-content-center")
         div(class="flex flex-col justify-center items-center")
             p(class="text-2xl mb-5") Guardando...
@@ -318,4 +331,5 @@ block scripts
     script(src="/js/licenses.js") 
     script(src="/js/watermark.js") 
     script(src="/js/errorsBackend.js") 
+    script(src="/js/isTherePayment.js") 
     script(src="https://kit.fontawesome.com/e6a1497caa.js" crossorigin="anonymous")
