--- a/views/chat/chat.pug
+++ b/views/chat/chat.pug
@@ -172,12 +172,12 @@ block contenido
                                         i(class="fa-solid fa-arrow-up-right-from-square text-xl")
                                         span(class="text-xl") Ir
 
-                            div(class="flex flex-col flex-1 2xl:flex-initial 2xl:w-2/12 justify-center")
+                            .status(class="flex flex-col flex-1 2xl:flex-initial 2xl:w-2/12 justify-center items-center")
                                 div(class="grid place-content-center")
                                     span(class="price text-green-700")
                                 div(class="grid place-content-center space-y-2") 
-                                    button(type="button" class="bg-green-700 text-white p-2 hover:opacity-75 w-20") Liberar 
-                                    button(type="button" class="bg-red-500 text-white p-2 hover:opacity-75 w-20") Rechazar
+                                    button.accept(type="button" class="bg-green-700 text-white p-2 hover:opacity-75 w-20") Liberar 
+                                    button.decline(type="button" class="bg-red-500 text-white p-2 hover:opacity-75 w-20") Rechazar
 
                     .text
                         span.textMsg
