--- a/views/layout/headerWithSearch.pug
+++ b/views/layout/headerWithSearch.pug
@@ -36,6 +36,8 @@ header(class="px-3.5 bg-white sticky top-0 z-50")
                             
                             a(href="/chat" class="")
                                 li(class="text-lg hover:bg-hard-gray cursor-pointer py-4 pl-6") Chat
+                            a(href="/transactions" class="")
+                                li(class="text-lg hover:bg-hard-gray cursor-pointer py-4 pl-6") Mis transacciones
                             a(href="/categories/select" class="")
                                 li(class="text-lg hover:bg-hard-gray cursor-pointer py-4 pl-6") Mis intereses
                             
