--- a/views/chat/chat.pug
+++ b/views/chat/chat.pug
@@ -194,7 +194,7 @@ block contenido
 
     template#templateNewConversation 
         div
-            input(type="radio" name="contact" class="") 
+            input(type="radio" name="contact" class="hidden") 
             label.contact(class="flex pl-10 my-3 py-3 hover:bg-gray-input -ml-5 cursor-pointer mr-4")
                 .photo(class="w-12") 
                     .photoProfile(class="relative w-12 h-12 m-auto") 
