--- a/views/publications/publication.pug
+++ b/views/publications/publication.pug
@@ -79,17 +79,7 @@ block contenido
                 form#formPayment(action=`/payment/new-order/${publication.id}/?_csrf=${csrfToken}`, method="post") 
                     button(type="submit" class="h-full bg-green-600 w-44 rounded-3xl text-xl font-semibold hover:opacity-90" data-id= publication.id) Pagar
         
-            #alertConfigurePayment(class="z-50 absolute top-0 left-0 w-screen h-screen bg-gray-400/50 grid place-content-center hidden" style="position:fixed;")
-                div(class="bg-white p-8")
-                    div(class="w-full text-center p-4") 
-                        i(class="fa-solid fa-circle-exclamation text-8xl text-red-600")
-                    div(class="m-auto text-center w-1/2 space-y-3 p-4 pb-6")
-                        h3(class="text-3xl text-principal-gray font-semibold") Hubo un problema
-                        p#messageErrorPayment(class="text-gray-400 font-light text-sm" style="text-wrap:balance")
-                    div(class="flex flex-col w-1/2 m-auto space-y-3") 
-                        div(class="w-full")
-                            button#sendMessage(type="button" class="bg-sky-500 py-2 px-4 text-white w-full hover:bg-sky-600" data-id= publication.id) Enviar mensaje
-                        button#btnCloseAlertPayment(type="button" class="py-2 px-4 bg-gray-input text-principal-gray w-full hover:bg-gray-input/90") Volver  
+        
         else    
             if publication.type == 'sale' && user ? (user.id !== userPost.id) : ''
                 .sale(class="mx-10 flex justify-between p-4 rounded-3xl h-28 text-white bg-gradient-to-r from-black  via-gray-900 to-gray-700") 
@@ -122,10 +112,20 @@ block contenido
                         if publication.typeSale == 'unique' || publication.rights_of_use_id == 2
                             button#sendMessage(class="bg-green-600 w-44 rounded-3xl text-xl font-semibold hover:opacity-90" data-id= publication.id) Adquirir
                         else if publication.typeSale == 'general'
-                            form(action=`/payment/new-order/${publication.id}/?_csrf=${csrfToken}`, method="post") 
+                            form#formPayment(action=`/payment/new-order/${publication.id}/?_csrf=${csrfToken}`, method="post") 
                                 button#sendMessage(type="submit" class="h-full bg-green-600 w-44 rounded-3xl text-xl font-semibold hover:opacity-90" data-id= publication.id) Adquirir
-                    
-
+                            
+        #alertConfigurePayment(class="z-50 absolute top-0 left-0 w-screen h-screen bg-gray-400/50 grid place-content-center hidden" style="position:fixed;")
+            div(class="bg-white p-8")
+                div(class="w-full text-center p-4") 
+                    i(class="fa-solid fa-circle-exclamation text-8xl text-red-600")
+                div(class="m-auto text-center w-1/2 space-y-3 p-4 pb-6")
+                    h3(class="text-3xl text-principal-gray font-semibold") Hubo un problema
+                    p#messageErrorPayment(class="text-gray-400 font-light text-sm" style="text-wrap:balance")
+                div(class="flex flex-col w-1/2 m-auto space-y-3") 
+                    div(class="w-full")
+                        button#sendMessage(type="button" class="bg-sky-500 py-2 px-4 text-white w-full hover:bg-sky-600" data-id= publication.id) Enviar mensaje
+                    button#btnCloseAlertPayment(type="button" class="py-2 px-4 bg-gray-input text-principal-gray w-full hover:bg-gray-input/90") Volver  
 
         .moreInfo(class="mx-10 mt-6 mb-4 space-y-2")
             span(class="font-medium text-lg text-principal-gray") Mas Información 
